@@ -1,0 +1,7 @@
+use utf8;
+package Local::CamelSchema;
+use strict;
+use warnings;
+use base 'DBIx::Class::Schema';
+__PACKAGE__->load_namespaces;
+1;
